--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,7 @@
   width: auto; /* Use the image's intrinsic width */
   height: auto;
 }
+
+.navbar-transition {
+  transition: padding 0.3s ease-in-out, other-properties 0.3s ease-in-out;
+}
