--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -26,3 +26,15 @@
 .delay-2 {
   animation-delay: 1.4s;
 }
+
+
+.font-lato {
+  font-family: 'Lato', sans-serif;
+}
+.font-hbold {
+  font-weight: 770;
+}
+h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
