--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -34,7 +34,10 @@
 .font-hbold {
   font-weight: 770;
 }
-h1 {
-  margin-top: 0;
-  margin-bottom: 0;
+
+.custom-heading {
+  line-height: 0.9; /* Adjust line-height as needed */
+}
+.clamp-h1 {
+  font-size: clamp(1.5rem, 4vw, 2.5rem);
 }
