--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -41,3 +41,11 @@
 .clamp-h1 {
   font-size: clamp(1.5rem, 4vw, 2.5rem);
 }
+
+.font-general-sans {
+  font-family: 'General Sans';  
+}
+
+.font-lato {
+  font-family: 'Lato';
+}
