--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -69,3 +69,21 @@
   height: 200px; /* Fixed height of your component */
   /* Other styles for your component */
 }
+
+.custom-heading1 {
+  line-height: 1.2; /* Adjust line-height as needed */
+}
+
+.custom-paragraph {
+  line-height: 1.3; /* Adjust line-height as needed */
+}
+
+.custom-paragraphMb {
+  line-height: 1.1; /* Adjust line-height as needed */
+}
+.font-general-sans {
+  font-family: 'General Sans';  
+}
+.font-lato {
+  font-family: 'Lato';
+}
